Make overflow-x auto for td - Fix #1

--- a/src/HeadersViewer.scss
+++ b/src/HeadersViewer.scss
@@ -11,7 +11,7 @@
 
   td {
     white-space: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 }
 
